dim/spec/test_input/invalid_input/invalid_originator.dim
Config:
  - originator: 334
    files:
        - modules/test_module_1.dim
        - modules/test_module_2.dim
    category: module
